# musical-notes-project

./: .gitignore  README.md  global_requirements.txt  pyproject.toml  requirements.txt
